force-app/main/default/objects/rstk__sohdr__c/fields/Correction_Order__c.field-meta.xml
<CustomField>
    <fullName>Correction_Order__c</fullName>
    <label>Correction Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>