force-app/main/default/objects/rstk__sohdr__c/fields/No_Catalog_in_Order__c.field-meta.xml
<CustomField>
    <fullName>No_Catalog_in_Order__c</fullName>
    <label>No Catalog in Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>