force-app/main/default/objects/rstk__sohdr__c/fields/signature_Required__c.field-meta.xml
<CustomField>
    <fullName>signature_Required__c</fullName>
    <description>This is custom attribute field</description>
    <label>signature Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>