force-app/main/default/objects/rstk__sohdr__c/fields/third_Party_Carrier_Account_Billing__c.field-meta.xml
<CustomField>
    <fullName>third_Party_Carrier_Account_Billing__c</fullName>
    <label>third Party Carrier Account Billing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>