force-app/main/default/objects/rstk__sohdr__c/listViews/Filtered_Sales_Orders_Closed.listView-meta.xml
<ListView>
    <fullName>Filtered_Sales_Orders_Closed</fullName>
    <columns>NAME</columns>
    <columns>rstk__sohdr_custno__c</columns>
    <columns>rstk__sohdr_order__c</columns>
    <columns>rstk__sohdr_custpo__c</columns>
    <columns>rstk__sohdr_otype__c</columns>
    <columns>rootstock__Order_Total__c</columns>
    <columns>rstk__sohdr_totamt__c</columns>
    <columns>rootstock__Pre_Tax_Order_Total__c</columns>
    <columns>rstk__sohdr_freightamt__c</columns>
    <columns>rstk__sohdr_terms__c</columns>
    <columns>rstk__sohdr_closed__c</columns>
    <columns>rstk__sohdr_closeshort__c</columns>
    <filterScope>Everything</filterScope>
    <label>Filtered Sales Orders Closed</label>
</ListView>