force-app/main/default/objects/rstk__sohdr__c/listViews/Sales_Orders_Cancelled.listView-meta.xml
<ListView>
    <fullName>Sales_Orders_Cancelled</fullName>
    <columns>NAME</columns>
    <columns>rstk__sohdr_custno__c</columns>
    <columns>rstk__sohdr_order__c</columns>
    <columns>rstk__sohdr_custpo__c</columns>
    <columns>rstk__sohdr_otype__c</columns>
    <columns>rootstock__Order_Total__c</columns>
    <columns>rstk__sohdr_totamt__c</columns>
    <columns>rootstock__Pre_Tax_Order_Total__c</columns>
    <columns>rstk__sohdr_freightamt__c</columns>
    <columns>rstk__sohdr_terms__c</columns>
    <columns>rstk__sohdr_closed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>rstk__sohdr_cancelled__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Sales Orders Cancelled</label>
</ListView>